src/bootstrap/test/v0_6/rejects/04_nil_no_context/main.zg
# requires: v0.6

let x := nil
print x
